# mini-firefighter-robot

./: .gitignore  README.md  platformio.ini
esp32cam_calibrate/: CMakeLists.txt  sdkconfig
esp32cam_calibrate/main/: main.c
esp32cam_landmark/: CMakeLists.txt
esp32cam_landmark/main/: CMakeLists.txt  cam_colors.h  idf_component.yml  main.c
firefighter_esp32s3/: CMakeLists.txt
firefighter_esp32s3/main/: CMakeLists.txt  config.h  main.c  shared.c  shared.h  task_camera_uart.c  task_flame_detect.c  task_lidar.c  task_motor.c  task_navigation.c  task_state_machine.c  task_wifi.c
firefighter_sim/: package.xml  serial_bridge_node.py
include/: config.h
src/: camera_vision.cpp  camera_vision.h  main.cpp  motors.cpp  motors.h  sensors.cpp  sensors.h  state_machine.cpp  state_machine.h  suppression.cpp  suppression.h  wifi_commander.cpp  wifi_commander.h
test/: test_motors.cpp  test_sensors.cpp  test_suppression.cpp  test_wifi.cpp
